# The-Modern-Cpp-Challenge

./: CMakeLists.txt  LICENSE  README.md
Chapter01/problem_01/: CMakeLists.txt  main.cpp
Chapter01/problem_02/: CMakeLists.txt
Chapter01/problem_03/: CMakeLists.txt
Chapter01/problem_04/: CMakeLists.txt  main.cpp
Chapter01/problem_05/: CMakeLists.txt  main.cpp
Chapter01/problem_06/: CMakeLists.txt  main.cpp
Chapter01/problem_07/: CMakeLists.txt  main.cpp
Chapter01/problem_08/: CMakeLists.txt  main.cpp
Chapter01/problem_09/: CMakeLists.txt  main.cpp
Chapter01/problem_10/: CMakeLists.txt  main.cpp
Chapter01/problem_11/: CMakeLists.txt
Chapter01/problem_12/: CMakeLists.txt  main.cpp
Chapter01/problem_13/: CMakeLists.txt
Chapter01/problem_14/: CMakeLists.txt  main.cpp
Chapter02/problem_15/: CMakeLists.txt
Chapter02/problem_16/: CMakeLists.txt  main.cpp
Chapter02/problem_17/: CMakeLists.txt
Chapter02/problem_18/: CMakeLists.txt  main.cpp
Chapter02/problem_19/: CMakeLists.txt  main.cpp
Chapter02/problem_20/: CMakeLists.txt
Chapter02/problem_21/: CMakeLists.txt  main.cpp
Chapter02/problem_22/: CMakeLists.txt  main.cpp
Chapter03/problem_23/: CMakeLists.txt  main.cpp
Chapter03/problem_24/: CMakeLists.txt  main.cpp
Chapter03/problem_25/: CMakeLists.txt  main.cpp
Chapter03/problem_26/: CMakeLists.txt  main.cpp
Chapter03/problem_27/: CMakeLists.txt  main.cpp
Chapter03/problem_28/: CMakeLists.txt  main.cpp
Chapter03/problem_29/: CMakeLists.txt  main.cpp
Chapter03/problem_30/: CMakeLists.txt
Chapter03/problem_31/: CMakeLists.txt
Chapter04/problem_32/: CMakeLists.txt
Chapter04/problem_33/: CMakeLists.txt  main.cpp
Chapter04/problem_34/: CMakeLists.txt  sample34.txt
Chapter04/problem_35/: CMakeLists.txt
Chapter04/problem_36/: CMakeLists.txt  main.cpp
Chapter04/problem_37/: CMakeLists.txt  main.cpp
Chapter04/problem_38/: CMakeLists.txt
Chapter05/problem_39/: CMakeLists.txt  main.cpp
Chapter05/problem_40/: CMakeLists.txt  main.cpp
Chapter05/problem_41/: CMakeLists.txt  main.cpp
Chapter05/problem_42/: CMakeLists.txt  main.cpp
Chapter05/problem_43/: CMakeLists.txt  main.cpp
Chapter05/problem_44/: CMakeLists.txt  main.cpp
Chapter06/problem_45/: CMakeLists.txt  main.cpp
Chapter06/problem_46/: CMakeLists.txt
Chapter06/problem_47/: CMakeLists.txt
Chapter06/problem_48/: CMakeLists.txt
Chapter06/problem_49/: CMakeLists.txt
Chapter06/problem_50/: CMakeLists.txt  main.cpp
Chapter06/problem_51/: CMakeLists.txt  main.cpp
Chapter06/problem_52/: CMakeLists.txt  main.cpp
Chapter06/problem_53/: CMakeLists.txt  main.cpp
Chapter06/problem_54/: CMakeLists.txt  main.cpp
Chapter06/problem_55/: CMakeLists.txt  main.cpp
Chapter06/problem_56/: CMakeLists.txt  main.cpp
Chapter06/problem_57/: CMakeLists.txt
Chapter06/problem_58/: CMakeLists.txt
Chapter06/problem_59/: CMakeLists.txt  main.cpp
Chapter06/problem_60/: CMakeLists.txt  main.cpp
Chapter07/problem_61/: CMakeLists.txt  main.cpp
Chapter07/problem_62/: CMakeLists.txt  main.cpp
Chapter07/problem_63/: CMakeLists.txt
Chapter07/problem_64/: CMakeLists.txt
Chapter07/problem_65/: CMakeLists.txt
Chapter07/problem_66/: CMakeLists.txt
Chapter08/problem_67/: CMakeLists.txt
Chapter08/problem_68/: CMakeLists.txt
Chapter08/problem_69/: CMakeLists.txt  main.cpp
Chapter08/problem_70/: CMakeLists.txt  main.cpp
Chapter08/problem_71/: CMakeLists.txt
Chapter08/problem_72/: CMakeLists.txt  main.cpp
Chapter09/problem_73/: CMakeLists.txt
Chapter09/problem_74/: CMakeLists.txt  main.cpp  movies.xml
Chapter09/problem_75/: CMakeLists.txt
Chapter09/problem_76/: CMakeLists.txt  movies.json
Chapter09/problem_77/: CMakeLists.txt
Chapter09/problem_78/: CMakeLists.txt
Chapter10/problem_79/: CMakeLists.txt
Chapter10/problem_80/: CMakeLists.txt
Chapter10/problem_81/: CMakeLists.txt  main.cpp
Chapter10/problem_82/: CMakeLists.txt  main.cpp
Chapter10/problem_83/: CMakeLists.txt  main.cpp
Chapter10/problem_84/: CMakeLists.txt  main.cpp
Chapter10/problem_85/: CMakeLists.txt  cppchallenger85.db  moviesdb.sql
Chapter10/problem_86/: CMakeLists.txt  cppchallenger86.db
Chapter10/problem_87/: CMakeLists.txt  cppchallenger87.db  moviesdb.sql
Chapter11/problem_88/: CMakeLists.txt  main.cpp
Chapter11/problem_89/: CMakeLists.txt
Chapter11/problem_90/: CMakeLists.txt  main.cpp
Chapter11/problem_91/: CMakeLists.txt  main.cpp
Chapter11/problem_92/: CMakeLists.txt
Chapter11/problem_93/: CMakeLists.txt  main.cpp
Chapter11/problem_94/: CMakeLists.txt  sample.txt
Chapter12/problem_95/: CMakeLists.txt  main.cpp
Chapter12/problem_96c/: CMakeLists.txt  main.cpp
Chapter12/problem_96s/: CMakeLists.txt  main.cpp
Chapter12/problem_97/: CMakeLists.txt
Chapter12/problem_98/: CMakeLists.txt  main.cpp
Chapter12/problem_99/: CMakeLists.txt
Chapter12/problem_9a/: CMakeLists.txt
include/: movies.h
libs/PDF-Writer/: CMakeLists.txt
libs/PNGWriter/: CMakeLists.txt  pngwriter.cc  pngwriter.h
libs/ZipLib/: CMakeLists.txt
libs/ZipLib/extlibs/bzip2/: CMakeLists.txt
libs/ZipLib/extlibs/lzma/: CMakeLists.txt
libs/ZipLib/extlibs/zlib/: CMakeLists.txt
libs/cryptopp/: CMakeLists.txt  Filelist.txt  Readme.txt  adv-simd.h  aes.h  algebra.h  algparam.h  arc4.h  aria.cpp  aria.h  asn.h  bench1.cpp  bench2.cpp  blake2.cpp  cast.h  cbcmac.h  config.h  cpu.cpp  crc-simd.cpp  cryptdll.vcxproj.filters  cryptest.nmake  cryptest.vcxproj.filters  cryptlib.cpp  cryptlib.h  cryptlib.vcxproj.filters  datatest.cpp  des.h  dh2.h  dmac.h  dsa.h  ec2n.h  eccrypto.cpp  eccrypto.h  ecp.h  eprecomp.h  gcm-simd.cpp  gfpcrypt.h  gost.h  hkdf.h  hmac.h  (+65 more)
libs/curl/: CMakeLists.txt
test/: a01.cpp  a02.cpp  a03.cpp  a04.cpp  a06.cpp  a07.cpp  a08.cpp  a11.cpp  a13.cpp  a15.cpp  a17.cpp  a20.cpp  a30.cpp  a31.cpp  a32.cpp  a34.cpp  a35.cpp  a38.cpp  a45.cpp  a46.cpp  a47.cpp  a48.cpp  a49.cpp  a57.cpp  a58.cpp  a63.cpp  a64.cpp  a65.cpp  a66.cpp  a67.cpp  a68.cpp  a71.cpp  a73.cpp  a75.cpp  a76.cpp  a77.cpp  a78.cpp  a79.cpp  a80.cpp  a85.cpp  (+9 more)
(+25 files in other folders)
